# open_mower_ros

./: .gitmodules  Dockerfile
.github/workflows/: build-image.yaml
config/: mower_config.schema.json  mower_config.sh.example
docker/: Dockerfile
docker/assets/: nginx.conf
mower_comms_hb/: CMakeLists.txt  README.md  package.xml  rosdep.yaml
mower_comms_hb/scripts/: mower_comms.py
mower_imu/: CMakeLists.txt  package.xml  setup.py
mower_imu/scripts/: mower_imu
mower_imu/src/mower_imu/: MPU9250.py
mower_logic/cfg/: MowerLogic.cfg  MowerOdometry.cfg
mower_logic/src/mower_odometry/: mower_odometry.cpp
mower_msgs/: package.xml
mower_msgs/msg/: ESCStatus.msg
open_mower/config/: mag.json.example  mower_config.sh.example
open_mower/launch/: move_around.launch
open_mower/launch/include/: _comms.launch  _gps.launch  _localization.launch
open_mower/params/: ftc_local_planner.yaml
src/lib/ftc_local_planner/: CMakeLists.txt  mbf_plugin.xml  package.xml
src/mower_comms/: CMakeLists.txt
src/mower_comms/cfg/: MowerComms.cfg
src/mower_comms/src/: mower_comms.cpp
src/mower_comms_v1/src/: mower_comms.cpp
src/mower_comms_v2/src/: DiffDriveServiceInterface.cpp  DiffDriveServiceInterface.h  ImuServiceInterface.cpp  ImuServiceInterface.h  PowerServiceInterface.cpp  PowerServiceInterface.h  mower_comms.cpp
src/mower_logic/: CMakeLists.txt
src/mower_logic/cfg/: MowerLogic.cfg
src/mower_logic/msg/: CheckPoint.msg
src/mower_map/: CMakeLists.txt  nav_point_layer_plugin.xml  package.xml
src/mower_map/include/mower_map/: nav_point_layer.h
src/mower_map/src/: mower_map_service.cpp  nav_point_layer.cpp
src/mower_map/srv/: ConvertToMowingAreaSrv.srv  HasDockingPointSrv.srv  HasMowingAreaSrv.srv
src/mower_msgs/msg/: ESCStatus.msg
src/open_mower/: package.xml
utils/mower_buttons/: press_s1_long.sh  press_s2_long.sh
utils/scripts/: set_checkpoint.py
web/: flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
web/assets/: NOTICES
(+77 files in other folders)
