<?xml version="1.0"?>
<package format="2">
    <name>mower_map</name>
    <version>0.0.0</version>
    <description>The mower_map package</description>
    <maintainer email="clemens1@familie-elflein.de">Clemens Elflein</maintainer>
    <license>CC BY-NC-SA 4.0</license>

    <url type="website">https://github.com/ClemensElflein/OpenMower</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>grid_map_core</build_depend>
    <build_depend>grid_map_ros</build_depend>
    <build_depend>grid_map_filters</build_depend>
    <build_depend>grid_map_cv</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>rosbag</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>costmap_2d</build_export_depend>
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>grid_map_core</build_export_depend>
    <build_export_depend>grid_map_ros</build_export_depend>
    <build_export_depend>grid_map_filters</build_export_depend>
    <build_export_depend>grid_map_cv</build_export_depend>
    <build_export_depend>pluginlib</build_export_depend>
    <build_export_depend>rosbag</build_export_depend>


    <exec_depend>roscpp</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <depend>xbot_msgs</depend>
    <depend>xbot_rpc</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <costmap_2d plugin="${prefix}/nav_point_layer_plugin.xml"/>
    </export>
</package>
